--- a/yahtzee.html
+++ b/yahtzee.html
@@ -12,6 +12,7 @@
             margin:auto;
         }
         .body{
+            font-family: Geneva, Verdana, sans-serif;
             background-color: rgb(8, 14, 34);
         }
         .title_img{
@@ -20,6 +21,16 @@
             padding-left: 20; 
             padding-bottom: 10;
             filter:brightness(0.85)
+        }
+        .endgame{
+            position: absolute; 
+            margin-top: -30; 
+            color:gold; 
+            font-weight: bold; 
+            font-size: 15; 
+            width:480;
+            left: 50%;
+            transform: translateX(-50%);
         }
         .die_con{
             width: 600;
@@ -51,6 +62,7 @@
             border-radius: 10px 10px 0px 0px;
             justify-content: center;
             display: flex;
+            font-size: 14;
             background-color: gold;
         }
         .score_con{
@@ -58,6 +70,8 @@
             height: 200;
             background-color: rgb(175, 0, 0);
             padding-top: 30;
+            text-align: center;
+            position: relative;
         }
         .score_side{
             width: 600;
@@ -84,12 +98,14 @@
             padding-left: 12;
             padding-bottom: 3;
             padding-right: 12;
+            font-family: Geneva, Verdana, sans-serif;
         }
         .roll_button{
             width: 500;
             height: 40;
             border-radius: 5px;
             margin-left: 50;
+            font-family: Geneva, Verdana, sans-serif;
             font-size: large;
             margin-bottom: 20;
         }
@@ -142,6 +158,7 @@
         var rolls = 0;
 
         function roll(){
+            end_game()
             for (let d of Dice) {
                 if (rolls == 0){
                     d.reset()
@@ -305,7 +322,7 @@
 
         function end_game() {
             document.getElementById("roll_butt").disabled = true;
-            document.getElementById("endgame").innerHTML = "Game Over - Thanks for playing! Refresh to start a new game."
+            document.getElementById("endgame").innerHTML = "Thanks for playing! Refresh to start a new game."
             /*var lead = yaml.load(fs.readFileSync('leaderboard.yaml','utf-8'));*/
 
         }
@@ -357,7 +374,7 @@
                 <p id="Six_score" class="cat_num">0</p>
             </div>
         </div>
-        <span id="endgame" style="position: absolute; margin-top: -30; margin-left: 60; color:gold; font-weight: bold; font-size: 18; width:480;"></span>
+        <span id="endgame" class="endgame"></span>
         <div class="score_side">
             <div class="score_div">
                 <button id="3_Kind" class="score_button" onclick='score_dice("3_Kind")' disabled>3 of a Kind</button>
