straight names actually fit

--- a/yahtzee.html
+++ b/yahtzee.html
@@ -388,11 +388,11 @@
                 <p id="Full_House_score" class="cat_num">0</p>
             </div>
             <div class="score_div">
-                <button id="SM_Str" class="score_button" onclick='score_dice("SM_Str")' disabled>SM Str</button>
+                <button id="SM_Str" class="score_button" onclick='score_dice("SM_Str")' disabled>Small Straight</button>
                 <p id="SM_Str_score" class="cat_num">0</p>
             </div>
             <div class="score_div">
-                <button id="LG_Str" class="score_button" onclick='score_dice("LG_Str")' disabled>LG Str</button>
+                <button id="LG_Str" class="score_button" onclick='score_dice("LG_Str")' disabled>Large Straight</button>
                 <p id="LG_Str_score" class="cat_num">0</p>
             </div>
             <div class="score_div">
